# baconstack-template

./: .aider.conf.yml  .bumpversion.cfg  .env.example  .pre-commit-config.yaml  Procfile.jinja  README.md  app.json.jinja  copier.yaml  justfile.jinja  pyproject.toml  pyproject.toml.jinja
src/: config.py.jinja  {% if framework == "fastapi"  %}main.py{% endif %}.jinja  {% if framework == "flask"  %}app.py{% endif %}.jinja
src/utils/: db.py.jinja
templates/fastapi/src/: main.py.jinja
templates/flask/src/: app.py.jinja
tests/: test_template.py  test_template_fastapi.py  test_template_flask.py  {% if framework == "fastapi" %}test_main.py{% endif %}.jinja  {% if framework == "flask" %}test_app.py{% endif %}.jinja
