[project]
name = "baconstack-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "baconstack",
    "copier>=9.4.1",
    "pytest>=8.3.3",
]

[tool.uv.sources]
baconstack = { git = "https://github.com/sebbacon/baconstack" }
